--- a/src/stories/header.css
+++ b/src/stories/header.css
@@ -5,6 +5,9 @@
   border-bottom: 1px solid rgba(0, 0, 0, 0.1);
   padding: 15px 20px;
   font-family: 'Nunito Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  background-color: #400095;
+  color:#fff !important;
+  a{color:#fff;}
 }
 
 .storybook-header svg {
@@ -27,6 +30,6 @@
 
 .storybook-header .welcome {
   margin-right: 10px;
-  color: #333;
+  color: #fff;
   font-size: 14px;
 }
